# SkyrimSouls

./: CMakeLists.txt
SKSE/include/: SKSE.h
Skyrim/include/: Skyrim.h
Skyrim/include/Skyrim/NetImmerse/: NiTMap.h  NiTPointerMap.h
Skyrim/src/Menus/: HUDMenu.cpp
SkyrimSouls/: Hook_Game.cpp
